# galileo_nav_ws

./: .gitignore  README.md
.cache/clangd/index/: color.h.9DBAE02744085334.idx  color_text.hpp.A2E1B59773A61944.idx  common.hpp.4112589E03395D3F.idx  common_lib.hpp.CAC4AE2E0056FB38.idx  config.hpp.B6B7E0E769A89C59.idx  core.h.9DF32804D4AC7DFF.idx  counter_map.cpp.F5B7B593DC9381B8.idx  counter_map.h.E9CFB2931BD5747B.idx  eigen_alias.hpp.312CEFFAF6C0894B.idx  esdf_map.cpp.7766AC54B454DBCD.idx  esdf_map.h.6312ABDDCD949213.idx  eskf.cc.105A2C1A11046A59.idx  eskf.h.F51D041252190B99.idx  fmt_eigen.hpp.609F0AD0A67756B2.idx  format-inl.h.B60A5DCB8F4B4AEA.idx  format.h.397D071E92DCDFB8.idx  free_cnt_map.h.0C037B6D835DA151.idx  galileo_klio_node.cc.1AE232775CBBD088.idx  galileo_klio_node.h.232794B5E48BDE6E.idx  inf_map.cpp.A0443125D1F58498.idx  inf_map.h.5045A505FD8DCA8F.idx  laser_mapping.cc.6FB54CF291A221B2.idx  laser_mapping.hpp.209ED1E57FF2701C.idx  leg_utils.hpp.DB603C4E8E5320EE.idx  lidar_processing.cc.CFCF7A1ED00466E6.idx  lidar_processing.h.97A1D086FA71CB9D.idx  math_utils.hpp.E061B31CA3EF2CD0.idx  prob_map.cpp.03C1B20754A91D3C.idx  prob_map.h.179A3C2852466978.idx  raycaster.cpp.F2533B8E2B790562.idx  raycaster.h.E8D6F7D30A500818.idx  rog_map.cpp.4EB3738454469922.idx  rog_map.h.87ABC7AD536D682F.idx  rog_map_node.cpp.8F748785636CA647.idx  scope_timer.hpp.CD53A57F53525453.idx  sliding_map.cpp.1CF09F7D60D6D83A.idx  sliding_map.h.33CEBE60A1EE4463.idx  state_initial.hpp.C9FB341FE8FEEF9D.idx  timer_utils.hpp.C46AFE28A9A521B5.idx  type_utils.hpp.05347726A06A431F.idx  (+3 more)
src/galileo_assets/grq20_v1d6_airy/: .asset_hash  config.yaml  grq20_v1d6_airy.urdf  grq20_v1d6_airy.xml  grq20_v1d6_airy_rviz.urdf  robot_data.xlsx  scene.xml
src/galileo_assets/grq20_v1d6_airy/meshes/meshes_simplify/: FL_CALF.STL  FL_HIP.STL  FL_THIGH.STL  RL_HIP.STL
src/galileo_assets/grq20_v1d6_airy/meshes/terrain/: slope.STL  stair.STL
src/galileo_bringup/: CMakeLists.txt  package.xml
src/galileo_bringup/config/: bringup.yaml
src/galileo_bringup/launch/: bringup.launch.py
src/galileo_data/8.04/: metadata.yaml
src/galileo_data/8.11-1/: metadata.yaml
src/galileo_data/8.11-2/: metadata.yaml
src/galileo_data/8.11-3/: metadata.yaml
src/galileo_data/8.12-1/: metadata.yaml
src/galileo_data/8.12-2-calib/: metadata.yaml
src/galileo_klio/: CMakeLists.txt  README.md  package.xml
src/galileo_klio/config/: galileo_klio_params.yaml
src/galileo_klio/include/: common.hpp  eskf.h  galileo_klio_node.h  laser_mapping.hpp  leg_utils.hpp  lidar_processing.h  math_utils.hpp  state_initial.hpp  timer_utils.hpp  voxel_map.h
src/galileo_klio/launch/: galileo_klio_launch.py
src/galileo_klio/rviz/: galileo_klio.rviz
src/galileo_klio/src/: eskf.cc  galileo_klio_node.cc  laser_mapping.cc  lidar_processing.cc  voxel_map.cc
src/galileo_lcm_ros2_bridge/: CMakeLists.txt  package.xml
src/galileo_lcm_ros2_bridge/launch/: bridge.launch.py
src/galileo_lcm_ros2_bridge/src/bridge/include/: recorder_node.hpp
src/galileo_lcm_ros2_bridge/src/bridge/include/lcm_types/: AllJointControllerData.hpp  ContactData.hpp  DebugData.hpp  DebugDataNames.hpp  ImuData.hpp  JointCommandMITData.hpp  JointStateData.hpp  LidarMarkerData.hpp  OdometryData.hpp  PointCloudData.hpp  Quaternion.hpp  RobotDebugData.hpp  StateCodeData.hpp  TaskGroupData.hpp  UserCommandData.hpp
src/galileo_lcm_ros2_bridge/src/bridge/src/: recorder_node.cpp
src/galileo_map/: CMakeLists.txt  package.xml
src/galileo_map/config/: click_smooth_ros2.yaml  galileo_map.rviz
src/galileo_map/include/rog_map/: esdf_map.h  free_cnt_map.h  inf_map.h  prob_map.h  rog_map.h
src/galileo_map/include/rog_map/rog_map_core/: config.hpp  counter_map.h  raycaster.h
src/galileo_map/include/rog_map_ros/: rog_map_ros2.hpp
src/galileo_map/include/super_utils/: color_msg_utils.hpp  eigen_alias.hpp  yaml_loader.hpp
src/galileo_map/launch/: demo.launch.py
src/galileo_map/src/rog_map/: prob_map.cpp  rog_map_node.cpp
src/galileo_sam/: README.md
src/galileo_sam/galileo_sam/: CMakeLists.txt  package.xml
src/galileo_sam/galileo_sam/config/: config.yaml  sam_rviz.rviz
src/galileo_sam/galileo_sam/include/: galileo_sam.h  loop_closure.h  pose_pcd.hpp  utilities.hpp
src/galileo_sam/galileo_sam/launch/: run.launch  run.launch.py
src/galileo_sam/galileo_sam/src/: galileo_sam.cpp  main.cpp
src/rslidar_sdk/src/rslidar_sdk/config/: config.yaml
src/rslidar_sdk/src/rslidar_sdk/src/rs_driver/cmake/: rs_driverConfig.cmake
