<?xml version="1.0"?>
<package format="3">
  <name>galileo_bringup</name>
  <version>0.1.0</version>
  <description>Unified launch entry for the Galileo navigation workspace.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <exec_depend>galileo_klio</exec_depend>
  <exec_depend>galileo_sam</exec_depend>
  <exec_depend>galileo_map</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

