<?xml version="1.0"?>
<package format="3">
  <name>galileo_map</name>
  <version>0.1.0</version>
  <description>Mapping module providing voxel/probability grid utilities and ROS2 node.</description>
  <maintainer email="renyf@connect.hku.hk">Yunfan Ren</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 依赖 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <exec_depend>rviz2</exec_depend>

  <!-- 系统依赖（通过 rosdep 解析） -->
  <depend>libpcl-dev</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
